--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                     <span class="icon">📧</span>
                     <div>
                         <span>電子郵件</span><br>
-                        <a href="/cdn-cgi/l/email-protection#7a1613141f161b15181b13484a484e3a1d171b131654191517"><span class="__cf_email__" data-cfemail="0a6663646f666b65686b63383a383e4a6d676b636624696567">[email&#160;protected]</span></a>
+                        <a href="mailto:linebooks2026@gmail.com">linebooks2026@gmail.com</a>
                     </div>
                 </div>
                 <div class="contact-item">
